--- a/16realfriends.html
+++ b/16realfriends.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     
-<title>Požadovaná stránka nebyla nalezena</title>
+<title>Ověření emailu</title>
 <meta name="keywords" content="16realfriends.com" />
 <meta name="description" content="16realfriends.com" />
 <meta name="author" content="Sixteen" />
@@ -56,8 +56,8 @@
   <div class="wrapper mb-50 center">
 <h4>Ohh, sorry...</h4>
 
-<p>We couldn't find the page you were looking for...<br />
-What do you want to do now?</p>
+<!--<p>We couldn't find the page you were looking for...<br />-->
+<!--What do you want to do now?</p>-->
 <a href="/"><span>Go to the home page</span></a> &nbsp; <a href="mailto:hello@16realfriends.com"><span>Contact us!</span></a></div>
 </div>
   </div>
