--- a/16realfriends.html
+++ b/16realfriends.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     
-<title>Ověření emailu</title>
+<title>Email verification</title>
 <meta name="keywords" content="16realfriends.com" />
 <meta name="description" content="16realfriends.com" />
 <meta name="author" content="Sixteen" />
@@ -51,14 +51,14 @@
 <section id="about">
   <div class="wrapper">
     <img src="http://www.16realfriends.com/assets/cs/images/logo_blue.png" alt="sixteen" />
-    <h1>Page not found</h1>
+    <h1>Email verification</h1>
       <div class="box-wysiwyg-simple">
   <div class="wrapper mb-50 center">
-<h4>Ohh, sorry...</h4>
+<h4>Verifying your email...</h4>
 
 <!--<p>We couldn't find the page you were looking for...<br />-->
 <!--What do you want to do now?</p>-->
-<a href="/"><span>Go to the home page</span></a> &nbsp; <a href="mailto:hello@16realfriends.com"><span>Contact us!</span></a></div>
+<!--<a href="/"><span>Go to the home page</span></a> &nbsp; <a href="mailto:hello@16realfriends.com"><span>Contact us!</span></a></div>-->
 </div>
   </div>
 </section>
