--- a/16realfriends.html
+++ b/16realfriends.html
@@ -66,7 +66,7 @@ $.getJSON('http://sixteen-real-friends-dev.herokuapp.com/v2/verifications/email/
   .fail(function(data){
     container.html('Sorry we could not verify your email, reason: ' + data.responseJSON.error)
   })
-</scirpt>
+</script>
 
 <!--<p>We couldn't find the page you were looking for...<br />-->
 <!--What do you want to do now?</p>-->
